# pathcrumb

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/pathcrumb/: checker.py  cli.py  config.py  fixer.py  patterns.py  scanner.py
tests/: test_cli.py  test_fixer.py  test_headers.py  test_scanner.py
