[project]
name = "pathcrumb"
version = "0.1.0"
description = "Keep Python file headers aligned with their relative paths"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tomli-w>=1.2.0",
    "typer>=0.24.1",
]

[project.scripts]
pathcrumb = "pathcrumb.cli:app"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15.6",
]

[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[tool.pathcrumb]
target = [
    "src",
]
ignore = [
    "tests",
]
