[project]
name = "pathcrumb"
version = "0.1.0"
description = "Keep Python file headers aligned with their relative paths"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["tomli-w>=1.2.0", "typer>=0.24.1"]

[project.scripts]
pathcrumb = "pathcrumb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pre-commit>=4.5.1", "pytest>=9.0.2", "pytest-cov>=7.0.0"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
fixable = ["ALL"]
