[project]
name = "pathcrumb"
version = "0.2.0"
description = "Keep Python file headers aligned with their relative paths"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [{ name = "Catur Wahyu" }]

keywords = ["python", "cli", "lint", "headers", "code-quality"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
]

dependencies = ["typer>=0.24.1", "tomli-w>=1.2.0"]

[project.urls]
Homepage = "https://github.com/cwahyu/pathcrumb"
Repository = "https://github.com/cwahyu/pathcrumb"
Issues = "https://github.com/cwahyu/pathcrumb/issues"

[project.scripts]
pathcrumb = "pathcrumb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "pre-commit>=4.5.1"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
fixable = ["ALL"]

[tool.pathcrumb]
target = ["src", "tests"]
ignore = []
